--- a/programacion2-semana7-arrays/programacion2-semana7-arrays/programacion2-semana7-arrays.csproj
+++ b/programacion2-semana7-arrays/programacion2-semana7-arrays/programacion2-semana7-arrays.csproj
@@ -43,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GastosDiarios.cs" />
     <Compile Include="Inventario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RevisarCalificaciones.cs" />
+    <Compile Include="SistemaDeRegistros.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
