--- a/EjerciciosProgramacionllDespuesDeSemanaSanta/EjerciciosProgramacionllDespuesDeSemanaSanta/EjerciciosProgramacionllDespuesDeSemanaSanta.csproj
+++ b/EjerciciosProgramacionllDespuesDeSemanaSanta/EjerciciosProgramacionllDespuesDeSemanaSanta/EjerciciosProgramacionllDespuesDeSemanaSanta.csproj
@@ -53,8 +53,15 @@
     <Compile Include="ejercicios1\IngrearDiezNumerosAndMostrarElMayorAndMinimo.cs" />
     <Compile Include="ejercicios1\IngresarCincoNumeros.cs" />
     <Compile Include="ejercicios1\SumarEnteros.cs" />
+    <Compile Include="Ejercicios2\ElementosDiviciblesPorUnoDosAndCinco.cs" />
     <Compile Include="Ejercicios2\EliminarMultiplos.cs" />
-    <Compile Include="Ejercicios2\EncontrarLaCadenaMasLargaSinUsarElMetodoMax.cs" />
+    <Compile Include="Ejercicios2\EncontrarElementosMayoresAlPromedio.cs" />
+    <Compile Include="Ejercicios2\EncontrarNumerosPrimos.cs" />
+    <Compile Include="Ejercicios2\EncontrarPalabrasQueTenganLetras.cs" />
+    <Compile Include="Ejercicios2\EncontrarSubCadena.cs" />
+    <Compile Include="Ejercicios2\LongitudImpartQueEmpiecenConA.cs" />
+    <Compile Include="Ejercicios2\MayoresAlPromedioUsando10Elementos.cs" />
+    <Compile Include="Ejercicios2\OrdenarDecendentementeAndEncontrarElSegundoNumeroMasGrande.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
